crates/reap-feed/tests/ui/private_login_bootstrap_is_opaque.rs
use reap_feed::PrivateLoginBootstrap;

fn main() {
    let _ = PrivateLoginBootstrap {
        payload: "raw-login-or-command".to_string(),
    };
}
